--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipageloader",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -28,8 +28,7 @@
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.9.0",
     "jest": "^22.4.2",
-    "nock": "^9.2.3",
-    "rimraf": "^2.6.2"
+    "nock": "^9.2.3"
   },
   "dependencies": {
     "axios": "^0.18.0",
