--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ipageloader",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "dist/index.js",
   "bin": {
@@ -36,8 +36,8 @@
     "commander": "^2.15.0",
     "debug": "^3.1.0",
     "js-beautify": "^1.7.5",
+    "listr": "^0.13.0",
     "lodash": "^4.17.5",
-    "mkdirp": "^0.5.1",
     "mz": "^2.7.0"
   }
 }
